css/styles.css
body {
    width: 100%;
    height: 100%;
    background-color: black;
    overflow-x: hidden;
}

.body-publications {
    width: 100%;
    height: 100%;
    background-color: #161616;
    overflow-x: hidden;
}

html {
    height: 100%;
    width: 100%;
    scroll-behavior: smooth;
}

::-webkit-scrollbar {
    display: none
}

#banner {
    width: 100%;
    height: 100%;
    background-image: url(../pictures/world2.gif);
    background-repeat: no-repeat;
    position: fixed;
    z-index: -1;
    background-position: calc(50% + 200px) calc(50% + 200px);
}

#banner-aboutus {
    width: 100%;
    height: 100%;
    background-image: url(../pictures/eyes.gif);
    background-repeat: no-repeat;
    position: fixed;
    z-index: -1;
    background-position: calc(50% - 100px) calc(50% - 150px);
}

#banner-publications {
    width: 100%;
    height: 100%;
    background-image: url(../pictures/color-hexagon.gif);
    background-repeat: no-repeat;
    background-position: center;
    position: fixed;
    z-index: -1;
}

#background,
#myCarousel,
.carousel-inner,
.carousel-item,
.carousel-item img {
    height: 100vh;
}

.carousel-item img {
    object-fit: cover;
}

#logo {
    max-width: 100px;
}

.pusher {
    height: 90%;
    width: 100%;
}

.banner {
    height: 250px;
    background-color: #CC3236 !important;
    border-radius: 50px;
    margin: 1px;
}

#myNavbar ul a:hover {
    /* effects when hovering over the navigation menu */
    border: 1px solid white;
    border-radius: 5px;
    margin: -1px;
    background-color: #CC3236;
    transition: all 0.25s ease-in;
}

ul .active {
    border: 1px solid white;
    border-radius: 5px;
    position: relative;
    bottom: 1px;
}

.ac-l {
    left: -1px;
}

.ac-r {
    left: 1px;
}

.navbar {
    padding-top: 20px;
    padding-bottom: 10px;
    height: 15%;
}

#button a:nth-child(1) {
    background-color: #CC3236;
}

#button {
    bottom: 40%;
}

.carousel-indicators {
    bottom: 20%;
    z-index: 1;
}

.carousel-indicators li {
    width: 75px;
    height: 5px;
    border-radius: 5px;
}

.img-fluid {
    width: 34px;
    height: 34px;
    margin-right: 15px;
}

#myNavbar ul li a:hover {
  text-shadow: 1px 0 0 currentColor;
}

li .img-fluid:hover {
    /* hovering effects will increase sizes */
    width: 40px;
    height: 40px;
    margin-top: -6px;
    margin-left: -6px;
}

.carousel-caption {
    bottom: 42%;
}

h1 {
    font-size: 100px;
    font-family: monospace;
    z-index: 1;
}

.title {
    top: 43.4%;
    position: relative;
}

#button a:hover {
    background-color: #CC3236 !important;
    transition: all 0.25s ease-in;
}

.carousel-control-prev-icon,
.carousel-control-next-icon {
    width: 50px;
    height: 50px;
}

#infobanner {
    margin-top: 250px;
    /*max-height: calc(100vh - 250px); /* fit the given space */
    /*overflow-y: scroll; /* delete vertical scrollbar even if the content overflows */
}

#infobanner2 {
    margin-top: 50px;
    max-height: calc(100vh - 250px); /* fit the given space */
    /*overflow-y: scroll; /* delete vertical scrollbar even if the content overflows */
}

footer {
    bottom: 0px;
    background-color: #16161C;
    z-index: 2;
}

.footer {
    position: static !important;
    background-color: #CC3236 !important;
    bottom: 0;
}

.footerOther {
    margin-top: 300px;
}

.footerPart1 {
    background-color: #CC3236;
    width: 100%;
    border-radius: 40px;
}

.navOther {
    background-image: url(../pictures/background.gif);
}

.bannerAboutUs {
    height: 800px;
}

.col-md-3, .team {
    height: 350px;
    width: 90%;
    background-color: #16161C;
    border-radius: 30px !important;
    padding: 20px;
    overflow: hidden;
}

.team {
    margin-left: 5%;
}

.cat-img {
    height: 100px;
}
.profile-img{
    height: 150px;
    border-radius: 50%;
}

.profile-info{
    display: flex;
}

.connection {
    background-color: white;
    width: 30%;
    height: 50px;
    margin: auto;
    position: relative;
    overflow: hidden;
    border-radius: 20px;
}

.conLabel {
    color: grey;
    width: 100%;
    position: absolute;
    line-height: 50px;
    font-family: sans-serif;
    z-index: 1;
    font-size: 21px;
    right: 1px;
}

.conField {
    height: 20px;
    padding-left: 40px;
    border: none;
    width: 50px;
    cursor: pointer;
    position: relative;
    right: 48%;
    z-index: 2;
    background: #222;
}

.conField:focus {
    width: 90%;
    outline: none;
    cursor: text;
    background: #fff;
    position: absolute;
    left: 10%;
}

/*
.conField:focus + .conButton {
    
}*/

.conButton {
    position: absolute;
    z-index: -2;
    opacity: 0;
    left: 0;
    border: none;
    top: 0;
    cursor: pointer;
    width: 90px;
    height: 10px;
}

.conText,
.conField,
.conButton {
    display: inline-block;
    height: 100%;
    transition: 0.4s ease;
    cursor: pointer;
}



@media screen and (max-width: 576px) {
    h1 {
        font-size: 70px;
    }

    li p {
        font-size: 12px !important;
    }

    .carousel-item img {
        height: 70%;
    }

    #button a {
        padding: 5% 10% !important;
        max-height: 10% !important;
        max-width: 45% !important;
    }

    #button a p {
        font-size: 10px;
    }

    #logo {
        max-width: 18%;
    }

    nav {
        position: static !important;
    }

    .navbar {
        background-image: none;
        background-color: #CC3236 !important;
    }

    .carousel-control-prev,
    .carousel-control-next {
        margin-bottom: 50%;
    }

    #button {
        bottom: 55%;
    }

    .carousel-indicators {
        position: initial;
    }

    #myNavbar ul a:hover {
        background-color: black;
    }

    figure img {

        max-width: 150px;
    }

    #banner {
        height: 105%;
        top: 0;
    }

    .connection {
        width: 80%;
    }

    .conButton {
        font-size: 11px;
        padding-right: 30px;
    }

    .conLabel {
        font-size: 18px;
    }

    #rocket {
        height: 500px;
        min-width: 100%;
    }

    .bannerAboutUs {
        height: 800px;
    }
    
    .bannerOurTeam {
        height: 800px;
    }
    
    .box {
        height: 20%;
    }
}


@media screen and (max-width: 450px) {
    .banner {
        height: 750px;

    }

    .conField:focus + .conButton {
        opacity: 1;
        left: 82%;
        z-index: 2;
        background: #222;
        color: white;
    }
}

@media screen and (max-width: 576px) and (min-width: 451px) {
    .banner {
        height: 550px;
    }

     .conField:focus + .conButton {
        opacity: 1;
        left: 82%;
        z-index: 2;
        background: #222;
        color: white;
    }

    .bannerAboutUs {
        height: 800px;
    }
}

@media screen and (max-width: 768px) and (min-width: 577px) {
    .banner {
        height: 450px;
    }

    .connection {
        width: 80%;
    }

    .conLabel {
        font-size: 19px;
    } 

    .bannerAboutUs {
        height: 800px;
    }
}


@media screen and (max-width: 623px) and (min-width: 576px) {
    .conField:focus + .conButton {
        opacity: 1;
        left: 80%;
        z-index: 2;
        background: #222;
        color: white;
    }
}

@media screen and (max-width: 672px) and (min-width: 624px) {
    .conField:focus + .conButton {
        opacity: 1;
        left: 83%;
        z-index: 2;
        background: #222;
        color: white;
    }
}

@media screen and (max-width: 768px) and (min-width: 673px) {
    .conField:focus + .conButton {
        opacity: 1;
        left: 85%;
        z-index: 2;
        background: #222;
        color: white;
    }
}


@media screen and (min-width:769px) and (max-width: 992px) {
    .banner {
        height: 350px;
    }

    .connection {
        width: 60%;
    }

    .conButton {
        font-size: 13px;
        padding-right: 30px;
    }

    .conField:focus + .conButton {
        opacity: 1;
        left: 85%;
        z-index: 2;
        background: #222;
        color: white;
    }

    .bannerAboutUs {
        height: 800px;
    }
}

@media screen and (min-width: 993px)
{
    #logo {
        margin-left: 10%;
        margin-right: 20%;
    }

    .navbar li {
        margin-left: 15px;
        margin-right: 15px;
    }
}

@media screen and (min-width:993px) and (max-width: 1200px)
{
    .connection {
        width: 50%;
    }

    .bannerAboutUs {
        height: 800px;
    }

}

@media screen and (min-width:993px) and (max-width: 1019px)
{

    .conField:focus + .conButton {
        opacity: 1;
        left: 83%;
        z-index: 2;
        background: #222;
        color: white;
    }
}

@media screen and (min-width:1020px) and (max-width: 1097px)
{

    .conField:focus + .conButton {
        opacity: 1;
        left: 83%;
        z-index: 2;
        background: #222;
        color: white;
    }
}

@media screen and (min-width:1098px) and (max-width: 1200px)
{

    .conField:focus + .conButton {
        opacity: 1;
        left: 85%;
        z-index: 2;
        background: #222;
        color: white;
    }
}

@media screen and (min-width:1201px) and (max-width:1424px)
{

    .conField:focus + .conButton {
        opacity: 1;
        left: 78%;
        z-index: 2;
        background: #222;
        color: white;
    }

    .bannerAboutUs {
        height: 800px;
    }
}

@media screen and (min-width:1425px) and (max-width:1600px)
{

    .conField:focus + .conButton {
        opacity: 1;
        left: 81%;
        z-index: 2;
        background: #222;
        color: white;
    }

    .bannerAboutUs {
        height: 800px;
    }
}

@media screen and (min-width:1601px) and (max-width:1800px)
{

    .conField:focus + .conButton {
        opacity: 1;
        left: 84%;
        z-index: 2;
        background: #222;
        color: white;
    }

    .bannerAboutUs {
        height: 800px;
    }
}


.aTitle{
  text-transform: uppercase;
  background: linear-gradient(90deg, #000, #fff, #000);
  letter-spacing: 5px;
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
  background-repeat: no-repeat;
  background-size: 80%;
  animation: shine 3s linear infinite;
  position: relative;
}


@keyframes shine {
  0% {
    background-position-x: -500%;
  }
  100% {
    background-position-x: 500%;
  }
}

